--- a/css/giving.css
+++ b/css/giving.css
@@ -172,6 +172,21 @@
 
 	@media (max-width: 480px) { 
 
+		body {
+			border-top: none; }
+
+		section.top {
+			background: white;
+			height: 44px;
+			border-bottom: 1px solid #eee; }
+
+		section.top h1 {
+			margin: 0;
+			line-height: 43px;
+			color: #333;
+			font-size: 17px;
+		}
+
 		.button-group.stacked {
 			display: block; }
 	}
