--- a/css/giving.css
+++ b/css/giving.css
@@ -170,7 +170,10 @@
 		color: white;
 	}
 
-	@media (max-width: 480px) { 
+	@media (max-width: 768px) { 
+
+		* {
+			font-size: 15px; }
 
 		body {
 			border-top: none; }
@@ -184,9 +187,16 @@
 			margin: 0;
 			line-height: 43px;
 			color: #333;
-			font-size: 17px;
-		}
+			font-size: 15px; }
 
 		.button-group.stacked {
 			display: block; }
+
+		p.callout {
+			font-size: 28px;
+			padding: 30px 15px 20px; }
+
+		.footer {
+			margin-top: 50px; }
+
 	}
