--- a/css/giving.css
+++ b/css/giving.css
@@ -18,7 +18,8 @@
 		border-top: 15px solid #CCC; }
 
 	.main {
-		max-width: 900px;
+		max-width: 768px;
+		min-width: 320px;
 		margin: 0 auto;
 		padding: 15px; }
 
@@ -37,8 +38,11 @@
 		max-height: 100px; }
 
 	.button-group {
-		display: -webkit-flex;
-  		display: flex;
+  		display: -webkit-box;   /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */
+		display: -moz-box;      /* OLD: Firefox (buggy) */ 
+		display: -ms-flexbox;   /* MID: IE 10 */
+		display: -webkit-flex;  /* NEW, Chrome 21+ */
+		display: flex;
   		margin-bottom: 10px; }
 
   	h2 {
@@ -51,14 +55,20 @@
 		background: #666;
 		border: 0;
 		color: white;
+		-webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+		-moz-box-flex: 1;         /* OLD - Firefox 19- */
+		-webkit-flex: 1;          /* Chrome */
+		-ms-flex: 1;
 		flex: 1;
+
+		display: block;
+
 		margin-right: 10px;
 		line-height: 60px;
 		text-align: center;
 		text-decoration: none;
 		border-radius: 2px;
-		cursor: pointer;
-		width: 100%; }
+		cursor: pointer; }
 
 	.button-group .btn.red-btn {
 		background: #cc3333; }
