--- a/assets/css/mochila-mobile.scss
+++ b/assets/css/mochila-mobile.scss
@@ -15,9 +15,11 @@
 /** GLOBAL **/
 html,
 body {
-	height:100%;
+	height: 100%;
+	width: 100%;
 	background: white;
 	overflow: hidden; 
+	display: block;
 }
 
 header {
@@ -26,15 +28,42 @@ header {
 	border-bottom: 1px solid #a0a0a0;
 	top: 0; 
 	z-index: 10;
+	position: relative;
+	background-color: white;
+
+	* {
+		line-height: 43px;
+		display: block;
+	}
 
 	h1 {
 		font-size: 17px;
 		color: black;
 		font-weight: 600;
 		width: 100%;
-		display: block;
-		line-height: 43px;
 		text-align: center;
+	}
+
+	*:first-child:not(h1),
+	h1 ~ * {
+		background-color: transparent;
+		display: block;
+		position: absolute;
+		height: 100%;
+		min-width: 40px;
+		top: 0;
+		color: #007aff;
+		-webkit-transition: right 5s ease 500s;
+		padding: 0 4px; 
+		text-decoration: none;
+	}
+
+	*:first-child:not(h1) {
+		left: 6px; 
+	}
+
+	h1 ~ * {
+		right: 6px; 
 	}
 
 }
@@ -42,17 +71,43 @@ header {
 section {
 	width: 100%;
 	height: 100%;
-	background-color: #fff;
 	position: relative;
 	overflow: hidden; 
+	display: block;
+	right: -100%;
+	z-index: 0;
 
 	.view {
+		background-color: #fff;
 		width: 100%;
 		height: 100%;
 		position: relative;
 		overflow-y: scroll;
 		-webkit-overflow-scrolling: touch;
-		padding-bottom: 49px; 
+		display: block;
+		padding-bottom: 43px;
+	}
+
+	&.slide {
+		right: 0;
+		transition: right 300ms ease-in-out;
+		-webkit-transition: right 300ms ease-in-out;
+		z-index: 100;
+	}
+
+	&.shift {
+		right: 0;
+		transition: right 300ms ease-in-out;
+		-webkit-transition: right 300ms ease-in-out;
+		z-index: 100;
+	}
+
+	&.show {
+		right: 0;
+	}
+
+	&.hide {
+		display: none;
 	}
 
 }
@@ -84,10 +139,6 @@ form,
 
 			* { font: inherit; }
 
-			*:first-child {
-				margin-right: 20px;
-			}
-			
 			input,
 			select,
 			textarea {
@@ -173,6 +224,7 @@ form,
 		border-bottom: none;
 		height: initial;
 		border-top: none; 
+		text-align: center;
 	}
 
 }
@@ -185,6 +237,7 @@ form,
 	z-index: 99;
 	height: 100%;
 	top: 100%;
+	display: block;
 
 	&.show {
 		top: 0;
@@ -196,6 +249,13 @@ form,
 		top: 100%;
 		transition: top 200ms ease-in-out;
 		-webkit-transition: top 300ms ease-in-out;
+	}
+
+	&.shift {
+		right: 100%;
+		transition: right 1s ease-in-out;
+		-webkit-transition: right 1s ease-in-out;
+		z-index: 100;
 	}
 
 }
