--- a/assets/css/mochila-mobile.css
+++ b/assets/css/mochila-mobile.css
@@ -53,14 +53,21 @@ header {
   header h1 ~ * {
     right: 6px; }
 
+#viewport {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  display: block; }
+
 section {
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
   overflow: hidden;
   display: block;
   right: -100%;
-  z-index: 0; }
+  z-index: 1; }
   section .view {
     background-color: #fff;
     width: 100%;
@@ -74,7 +81,8 @@ section {
     right: 0;
     transition: right 300ms ease-in-out;
     -webkit-transition: right 300ms ease-in-out;
-    z-index: 100; }
+    z-index: 100;
+    position: relative; }
   section.shift {
     right: 0;
     transition: right 300ms ease-in-out;
@@ -84,6 +92,13 @@ section {
     right: 0; }
   section.hide {
     display: none; }
+  section.reveal {
+    right: -280px;
+    transition: right 300ms ease-in-out;
+    -webkit-transition: right 300ms ease-in-out;
+    -moz-box-shadow: 3px 0px 3px 4px #CCC;
+    -webkit-box-shadow: 3px 0px 3px 4px #CCC;
+    box-shadow: 3px 0px 3px 4px #CCC; }
 
 form ul,
 .tableview ul {
@@ -207,3 +222,70 @@ form footer,
     transition: right 1s ease-in-out;
     -webkit-transition: right 1s ease-in-out;
     z-index: 100; }
+
+#menu {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  display: block;
+  z-index: 0;
+  left: -20px; }
+  #menu li {
+    padding: 0; }
+  #menu a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    width: 100%;
+    padding: 14px 0; }
+  #menu.focus {
+    left: 0;
+    transition: left 300ms ease-in-out;
+    -webkit-transition: left 300ms ease-in-out; }
+  #menu.side-menu {
+    background-color: #333; }
+  #menu.tableview {
+    background-color: transparent; }
+    #menu.tableview li {
+      border-bottom: 1px solid #ddd; }
+
+.post {
+  background: #fff;
+  border: 1px solid #ddd;
+  margin: 10px;
+  padding: 10px;
+  font-size: 14px;
+  -moz-box-shadow: 0px 1px 7px #ddd;
+  -webkit-box-shadow: 0px 1px 7px #ddd;
+  box-shadow: 0px 1px 7px #ddd;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  display: block; }
+  .post h3 {
+    font-weight: bold;
+    font-size: 15px;
+    margin-bottom: 10px; }
+    .post h3 small {
+      display: block;
+      color: #999; }
+  .post .img {
+    overflow: hidden;
+    display: block;
+    width: 100%;
+    height: 250px;
+    margin-top: 5px;
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
+  .post .content {
+    margin-bottom: 8px;
+    color: #555; }
+  .post .read-more {
+    color: #007aff;
+    text-decoration: none; }
